Fix all organizations slug alignment

--- a/app/assets/stylesheets/organizations.css
+++ b/app/assets/stylesheets/organizations.css
@@ -40,3 +40,8 @@
   position: relative;
   top: -2px;
 }
+
+.text-littlebitup {
+  position: relative;
+  top: -1px;
+}
